<resources>
    <string name="app_name">Digi Yathra</string>
    <string name="otp">OTP</string>
    <string name="submit">Submit</string>
    <string name="mobile">Mobile</string>
    <string name="dAccount">Don’t have an account? </string>
    <string name="signUp"> Sign up</string>
    <string name="signIn"> Sign In</string>
    <string name="msgUser">User Successfully Registered</string>
</resources>