<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayout"
    android:animateLayoutChanges="true"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_90sdp"
        android:src="@drawable/digi_logo"/>


    <LinearLayout
        android:id="@+id/layoutAnimate"
        android:layout_width="match_parent"
        android:animateLayoutChanges="true"
        android:layout_height="@dimen/_100sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_rectangle_5"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_150sdp"

            android:id="@+id/otpLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="OTP send to ****"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible"
                android:padding="10dp"
                android:gravity="center">

                <EditText
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:textSize="@dimen/_16ssp"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:backgroundTint="@color/white"
                    android:id="@+id/otp1"
                    android:textColor="@color/white"/>

                <EditText
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:textSize="@dimen/_16ssp"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:id="@+id/otp2"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/white"
                    />



                <EditText
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:textSize="@dimen/_16ssp"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:id="@+id/otp3"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/white"
                    />



                <EditText
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:textSize="@dimen/_16ssp"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:id="@+id/otp4"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/white"
                    />




            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">


                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:textColor="@color/app_color"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="@dimen/_15sdp"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/signLayout"
            android:layout_marginTop="@dimen/_25sdp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dAccount"
                android:layout_alignParentBottom="true"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/signUpTextView"
                android:text="@string/signUp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_alignParentBottom="true"
                android:textColor="@color/white"
                android:textSize="16sp" />


        </LinearLayout>





    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:animateLayoutChanges="true"
        android:layout_alignParentBottom="true">


        <LinearLayout
            android:id="@+id/frameLayout"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_line__1_"
            android:orientation="vertical"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/mobileEdit"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/ic_moile"
                android:drawablePadding="@dimen/_5sdp"
                android:inputType="number"
                android:maxLength="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

        <Button
            android:id="@+id/otpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="-25dp"
            android:text="@string/otp"
            app:cornerRadius="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="@+id/frameLayout"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>






</RelativeLayout>